--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
         <li>
             <a href="#">Nóis juntos</a>
             <ul class="fotos">
-                <li><a href="/2024.html">2024</a></li>
-                <li><a href="/2025.html">2025</a></li>
+                <li><a href="2024.html">2024</a></li>
+                <li><a href="2025.html">2025</a></li>
             </ul>
         </li>
-        <li><a href="/10motivos.html">10 motivos pra te amar</a></li>
-        <li><a href="/10series.html">10 séries/filmes para assistir juntos</a></li>
+        <li><a href="10motivos.html">10 motivos pra te amar</a></li>
+        <li><a href="10series.html">10 séries/filmes para assistir juntos</a></li>
     </ul>
     <div class="imagens">
-            <img src="/cabelo.jfif">
-            <img src="/olhando.jfif">
+            <img src="cabelo.jfif">
+            <img src="olhando.jfif">
     </div>
 
 </body>
