--- a/2025.html
+++ b/2025.html
@@ -28,10 +28,10 @@
 <body>
     <h1>EU TE AMOOOOOOOOOOO</h1>
     <div class="imagens">
-        <img src="/amor/5.jfif">
-        <img src="/amor/6.jfif">
-        <img src="/amor/7.jfif">
-        <img src="/amor/8.jfif">
+        <img src="5.jfif">
+        <img src="6.jfif">
+        <img src="7.jfif">
+        <img src="8.jfif">
     </div>
 
 </body>
