--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             display: flex;
             width: 100%;
             height: 40px;
-            font-size: 25px;
+            font-size: 100%;
             justify-content: center;
             position: absolute;
             background-color: crimson;
